Apply fix width of 300px to each box. Flex-wrap to nowrap.

--- a/03-flex-wrapping-and-columns/style.css
+++ b/03-flex-wrapping-and-columns/style.css
@@ -33,4 +33,9 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
   display: flex;
   border: 10px solid goldenrod;
   min-height: 100vh;
+  flex-wrap: nowrap;
+}
+
+.box {
+  width: 300px;
 }
